--- a/nginx.conf
+++ b/nginx.conf
@@ -31,6 +31,7 @@ http {
     server {
         listen 80 default_server;
         server_name localhost;
+        client_max_body_size 1024M;
 
         location ^~ /.well-known/acme-challenge/ {
             default_type "text/plain";
@@ -60,6 +61,7 @@ http {
     server {
         listen 443 ssl;
         server_name localhost;
+        client_max_body_size 1024M;
 
         ssl_certificate     /etc/letsencrypt/live/localhost/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/localhost/privkey.pem;
