--- a/nginx.conf
+++ b/nginx.conf
@@ -45,7 +45,7 @@ http {
             if ($http_user_agent ~ "^(docker\/1\.(3|4|5(?!\.[0-9]-dev))|Go ).*$" ) {
               return 404;
             }
-            proxy_pass http://registry/;
+            proxy_pass https://registry/;
             proxy_set_header  Host              $http_host;   # required for docker client's sake
             proxy_set_header  X-Real-IP         $remote_addr; # pass on real client's IP
             proxy_set_header  X-Forwarded-For   $proxy_add_x_forwarded_for;
@@ -61,7 +61,7 @@ http {
     server {
         listen 443 ssl;
         server_name localhost;
-        client_max_body_size 1024M;
+        client_max_body_size 2000M;
 
         ssl_certificate     /etc/letsencrypt/live/localhost/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/localhost/privkey.pem;
