--- a/nginx.conf
+++ b/nginx.conf
@@ -29,9 +29,9 @@ http {
     }
 
     server {
-        listen 80 default_server;
+        listen 80;
         server_name localhost;
-        client_max_body_size 1024M;
+        client_max_body_size 2000M;
 
         location ^~ /.well-known/acme-challenge/ {
             default_type "text/plain";
@@ -45,7 +45,7 @@ http {
             if ($http_user_agent ~ "^(docker\/1\.(3|4|5(?!\.[0-9]-dev))|Go ).*$" ) {
               return 404;
             }
-            proxy_pass https://registry/;
+            proxy_pass http://registry/;
             proxy_set_header  Host              $http_host;   # required for docker client's sake
             proxy_set_header  X-Real-IP         $remote_addr; # pass on real client's IP
             proxy_set_header  X-Forwarded-For   $proxy_add_x_forwarded_for;
@@ -59,7 +59,7 @@ http {
     }
 
     server {
-        listen 443 ssl;
+        listen 443 ssl default_server;
         server_name localhost;
         client_max_body_size 2000M;
 
