--- a/nginx.conf
+++ b/nginx.conf
@@ -31,13 +31,14 @@ http {
     server {
         listen 80;
         server_name localhost;
-        client_max_body_size 2000M;
+        client_max_body_size 0;
+        chunked_transfer_encoding on;
 
-        location ^~ /.well-known/acme-challenge/ {
-            default_type "text/plain";
-            root /etc/letsencrypt/webrootauth;
-            expires 0;
-        }
+        # location ^~ /.well-known/acme-challenge/ {
+        #     default_type "text/plain";
+        #     root /etc/letsencrypt/webrootauth;
+        #     expires 0;
+        # }
 
         location ^~ / {
             # Do not allow connections from docker 1.5 and earlier
@@ -47,9 +48,9 @@ http {
             }
             proxy_pass http://registry/;
             proxy_set_header  Host              $http_host;   # required for docker client's sake
-            proxy_set_header  X-Real-IP         $remote_addr; # pass on real client's IP
-            proxy_set_header  X-Forwarded-For   $proxy_add_x_forwarded_for;
-            proxy_set_header  X-Forwarded-Proto $scheme;
+            # proxy_set_header  X-Real-IP         $remote_addr; # pass on real client's IP
+            # proxy_set_header  X-Forwarded-For   $proxy_add_x_forwarded_for;
+            # proxy_set_header  X-Forwarded-Proto $scheme;
             proxy_read_timeout                  900;
         }
 
@@ -61,11 +62,8 @@ http {
     server {
         listen 443 ssl default_server;
         server_name localhost;
-        client_max_body_size 2000M;
-
-        ssl_certificate     /etc/letsencrypt/live/localhost/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/localhost/privkey.pem;
-
+        client_max_body_size 0;
+        chunked_transfer_encoding on;
 
         location ^~ / {
             # Do not allow connections from docker 1.5 and earlier
@@ -75,9 +73,9 @@ http {
             }
             proxy_pass http://registry/;
             proxy_set_header  Host              $http_host;   # required for docker client's sake
-            proxy_set_header  X-Real-IP         $remote_addr; # pass on real client's IP
-            proxy_set_header  X-Forwarded-For   $proxy_add_x_forwarded_for;
-            proxy_set_header  X-Forwarded-Proto $scheme;
+            # proxy_set_header  X-Real-IP         $remote_addr; # pass on real client's IP
+            # proxy_set_header  X-Forwarded-For   $proxy_add_x_forwarded_for;
+            # proxy_set_header  X-Forwarded-Proto $scheme;
             proxy_read_timeout                  900;
         }
     }
